Muchisimos cambios, o sea el programa casi esta listo para salir en Beta :)

--- a/src/about.html
+++ b/src/about.html
@@ -141,6 +141,9 @@
 		<li>robot.js [Jason Stallings]
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/octalmage/robotjs">https://github.com/octalmage/robotjs</a></li></ul>
 		</li>
+		<li>request [Mikeal Rogers]
+			<ul><li><a onclick="Clic(this,event)" href="https://github.com/request/request">https://github.com/request/request</a></li></ul>
+		</li>
 	</ul>
 	<p>Y estas maravillosas personas:</p>
 	<ul class="person">
