--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                 <ul class="bg-dark">
 				  <li><span>Ayuda de Blimp Animator</span></li> <!-- Se necesita una documentación md -->
 				  <li class="separator"></li>
-				  <li onclick="Actualizar()"><span>Buscar Actualizaciones...</span></li>	<!-- Se necesita un servidor -->
+				  <li onclick="BuscarActualizaciones()"><span>Buscar Actualizaciones...</span></li>	<!-- Se necesita un servidor -->
 				  <li onclick="Visitar()"><span>Visita nuestro Sitio Web</span></li> <!-- Se necesita una web -->					  
 				  <li class="separator"></li>
  				  <li onclick="Report()"><span>Reportar un Problema</span></li> <!-- Se necesita un servidor -->
@@ -114,7 +114,7 @@
              <button onclick="Reproducir()" title="Reproduce la animación"><i class="fa fa-play"></i></button>
 			 <button onclick="Construir()" title="Construye la animación en HTML/CSS"><i class="fa fa-cog"></i></button>
 			 <div class="separator"></div>
-			 <span title="Esta es la resolución con la cual se trabaja la animación" id="resolucion">w:1024px h:320px</span>
+			 <span ondblclick="SetTamanio()" title="Esta es la resolución con la cual se trabaja la animación" id="resolucion">w:1024px h:320px</span>
              <div class="right">
                 <button id="elm-relative" title="Posición relativa al cuerpo del documento"><i class="fa fa-th" aria-hidden="true"></i></button>
                 <button id="elm-absolute" title="Posición absoluta al cuerpo del documento"><i class="fa fa-dot-circle-o" aria-hidden="true"></i></button>
@@ -130,7 +130,7 @@
              </div>
           </div>
           <div class="row" style="height: calc(100% - 278px);">
-            <div id="renderer" class="col-sm">
+			<div id="renderer" class="col-sm">  
               <div id="webview" style="position: relative;z-index:1">
 
               </div>
