--- a/src/setSize.html
+++ b/src/setSize.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Añadir nuevo fotograma clave</title>
+    <title>Editar Resolución de Trabajo</title>
     <link rel="stylesheet" href="css/font.css" />
     <meta charset="utf-8"/>
     <style>
@@ -19,7 +19,7 @@
         .title
         {
             display: inline-block;
-            width:150px;;
+            width:50px;;
             text-align:right;
             padding-right: 10px;
             margin-bottom:20px;
@@ -50,8 +50,13 @@
         }
         .sub
         {
-            min-height: 20px;
+    		min-height: 20px;
+    		text-align: center;
         }
+		.sub.first
+		{
+			margin-top: 25px;
+		}
         button
         {
             padding:5px 10px;
@@ -72,29 +77,13 @@
         h4
         {
             text-align: center;
-		}
-		h4::-webkit-scrollbar
-		{
-			background: #343a40;
-		}
-		h4::-webkit-scrollbar-thumb
-		{
-			background: #464646;
-		}
-		h4::-webkit-scrollbar-track
-		{
-			background: #505961;
-		}
-		h4::-webkit-scrollbar-corner
-		{
-			background: #343a40;
-		}
+        }
     </style>
     <script>
         let aceptar = false;
         function accept()
         {
-            localStorage.timeFrame = document.getElementById("beginTo").value+";"+document.getElementById("duration").value
+            localStorage.resolFrame = document.getElementById("bwidth").value+";"+document.getElementById("bheight").value
             aceptar = true;
             window.close();
         }
@@ -102,23 +91,17 @@
         {
             if(!aceptar)
             {
-                localStorage.timeFrame = "null";                
+                localStorage.resolFrame = "null";                
             }
             window.close();
         }
         function cargar()
         {
-			if(localStorage.habilitarBegin == "false")
-			{
-				document.getElementById("beginTo").readOnly = true;
-				document.getElementById("beginTo").style.color = "gray";
-			}
-            if(localStorage.timeFrame != "null")
+            if(localStorage.resolFrame != "null")
             {
-                let arr = localStorage.timeFrame.split(";");
-                document.getElementById("beginTo").value = arr[0]
-                document.getElementById("duration").value = arr[1]
-                document.querySelector("h4").innerHTML = arr[2]
+                let arr = localStorage.resolFrame.split(";");
+                document.getElementById("bwidth").value = arr[0]
+                document.getElementById("bheight").value = arr[1]
             }
         }
         window.onload = cargar;
@@ -126,14 +109,13 @@
     </script>
 </head>
 <body style="background: #343a40;">
-    <h4 style="height:32px;overflow:auto">div#elm-647.default</h4>
-    <div class="sub">
-        <span class="title">Comienza en</span><input type="number" id="beginTo" min="0" step="0.5" value="0" />
-        <span>seg.</span>
+    <div class="sub first">
+        <span class="title">Ancho</span><input type="number" id="bwidth" min="0" step="1" value="1024" />
+        <span>px</span>
     </div>
     <div class="sub">
-        <span class="title">Dura hasta</span><input type="number" id="duration" min="0" step="0.5" value="1" />
-        <span>seg.</span>
+        <span class="title">Alto</span><input type="number" id="bheight" min="0" step="1" value="320" />
+        <span>px</span>
 	</div>
     <div class="sub right">
         <button onclick="accept()" id="Aceptar">Aceptar</button>
