--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
     <script type="text/javascript" src="js/keyframe.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/font.css"/>
+	<link rel="stylesheet" href="css/font.css"/>
+	<!--<link rel="stylesheet" href="css/theme/white.css"/>-->
     <style>
     html,body
     {
