Hecho el idioma y ya está hecho en ingles solo falta el javascript pero la funcionalidad ya está hecha

--- a/src/about.html
+++ b/src/about.html
@@ -3,6 +3,7 @@
     <title>Acerca de Blimp Animator</title>
     <link rel="stylesheet" href="css/font.css" />
 	<meta charset="utf-8"/>
+	<script defer type="text/javascript" src="i18n/local.js"></script>
 	<script>
 		const {shell} = require('electron').remote;
 		function Clic(that,evt)
@@ -122,9 +123,9 @@
 <body>
 	<div style="text-align: center"><img draggable="false" src="img/logo-512.png" width="128px"></div>
 	<h1>Blimp Animator <sub>v.0.1.0</sub></h1>
-	<p>Diseñado y programado por <strong>Jeremy Auvray</strong></p>
-	<p>Bajo la licencia MPL [<strong>Mozilla Public License</strong>] v.2.0</p>
-	<p>Con la ayuda de estas librerias libres:</p>
+	<p><span>Diseñado y programado por</span><strong> Jeremy Auvray</strong></p>
+	<p><span>Bajo la licencia MPL</span> [<strong>Mozilla Public License</strong>] v.2.0</p>
+	<p><span>Con la ayuda de estas librerias libres:</span></p>
 	<ul>
 		<li>Timeline.js [Marcin Ignac]
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/vorg/timeline.js">https://github.com/vorg/timeline.js</a></li></ul>
@@ -157,7 +158,7 @@
 			<ul><li><a onclick="Clic(this,event)" href="https://github.com/request/request">https://github.com/request/request</a></li></ul>
 		</li>
 	</ul>
-	<p>Y estas maravillosas personas:</p>
+	<p><span>Y estas maravillosas personas:</span></p>
 	<ul class="person">
 		<li>Francisco Garcia Rios</li>
 		<li>Alejandro Manuel Hinojo Gutiérrez</li>
@@ -167,7 +168,7 @@
 		<li>Manuel Montañez Solís</li>
 		<li>Tatiana Gutiérrez Lago</li>
 	</ul>
-	<p>Puedes contribuir, descargar o modificar el proyecto aqui:</p>
+	<p><span>Puedes contribuir, descargar o modificar el proyecto aqui:</span></p>
 	<ul>
 		<a href="#">Github</a>
 	</ul>
