--- a/src/htmlcode.html
+++ b/src/htmlcode.html
@@ -2,6 +2,7 @@
 <head>
     <title>Añadir Código HTML Personalizado</title>
 	<meta charset="utf-8" />
+	<script defer type="text/javascript" src="i18n/local.js"></script>
 	<link rel="stylesheet" href="css/font.css" />
 	<script>
 		if(localStorage.Tema != undefined && localStorage.Tema != "")
