--- a/src/setSize.html
+++ b/src/setSize.html
@@ -2,7 +2,8 @@
 <head>
     <title>Editar Resolución de Trabajo</title>
     <link rel="stylesheet" href="css/font.css" />
-    <meta charset="utf-8"/>
+	<meta charset="utf-8"/>
+	<script defer type="text/javascript" src="i18n/local.js"></script>
     <style>
         body
         {
