--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,11 @@
                     <option value="true" class="elm autoplay_elm">Sí</option>
                     <option value="false" class="elm autoplay_elm">No</option>
                   </select>
+                  <span>Bucle</span>
+                  <select>
+                    <option value="true" class="elm loop_elm">Sí</option>
+                    <option value="false" class="elm loop_elm">No</option>
+                  </select>
                 </div>
                 <span>Orden</span>
 				<input type="number" min="0" max="999" class="elm z-index_elm" />
