New Rotate option inside Inspector

--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,10 @@
                 <input pre="0 0 " post="px black" class="elm text-shadow_elm" min="0" type="number" />
                 <span style="width:12px;">px</span>
                 <span>Opacidad</span>
-                <input class="elm opacity_elm" min="0" max="1" step="0.1" type="number" />
+				<input class="elm opacity_elm" min="0" max="1" step="0.1" type="number" />
+				<span>Rotación</span>
+				<input pre="rotate(" post="deg)" class="elm transform_elm" min="0" type="number" />
+				<span style="width:20px;">deg</span>
               </div>
             </div>
             <div id="outline" style="max-width:262px;position: relative;z-index:5;display:none" class="col-sm-3 back-black">
