--- a/TimelineAnimation/index.html
+++ b/TimelineAnimation/index.html
@@ -8,6 +8,7 @@
     <style>
         .default
         {
+			position: relative;
             border:solid 1px black;
             width:50px;
             height: 50px;
@@ -19,8 +20,8 @@
     <div id="timeline">
         <div id="left">
             <div id="controller">
-                <button><i class="fa fa-play"></i></button>
-                <button><i class="fa fa-pause"></i></button>
+                <button><i id="play" class="fa fa-play"></i></button>
+                <button><i id="pause" class="fa fa-pause"></i></button>
                 <button><i class="fa fa-stop"></i></button>
                 <button><i class="fa fa-bars"></i></button>
             </div>
@@ -28,14 +29,20 @@
         </div>
         <div id="linespan">
             <div id="line-container">
-                <div id="timespan"></div>
-                <div id="slide"></div>
+				<div id="currentTime">0s</div>
+				<div id="timespan"></div>
+				<div id="slidescroll">
+					<div id="slidescrollcontain">
+						<div id="slide"></div>
+					</div>
+				</div>
             </div>
         </div>
     </div>
     <div id="prueba">
         <div id="elm65" class="default"></div>
-        <div id="elm85" class="default"></div>
+		<div id="elm85" class="default"></div>
+		<div id="elm105" class="default"></div>
     </div>
 </body>
 </html>
