Empezando Implementación y realizacion de la clase Timeline ES6

--- a/TimelineAnimation/index.html
+++ b/TimelineAnimation/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>TimelineGUI</title>
-    <script defer type="text/javascript" src="js/timeline_animation.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
+	<script defer type="text/javascript" src="js/timeline_animation.js"></script>
+    <link rel="stylesheet" href="css/timeline_animation.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
@@ -41,11 +41,6 @@
 				</div>
             </div>
         </div>
-    </div>
-    <div id="prueba">
-        <div id="elm65" class="default"></div>
-		<div id="elm85" class="default"></div>
-		<div id="elm105" class="default"></div>
     </div>
 </body>
 </html>
