Avance en la Implementación de la Timeline

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
                         <i class="fa fa-times"></i>
                     </button>
                     <button id="add_frame" title="Añadir fotograma clave a uno o varios elementos">
-                        <i class="fa fa-plus"></i>
+                        <i class="fa fa-window-maximize"></i>
                     </button>
                 </div>
                 <div id="timeline-span">
